<resources>
    <string name="app_name">mySMSsender</string>
    <string name="app_version">Version 1.0</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_send">SendActivity</string>

    <string name="textview_sendmsg">Send The Message</string>
    <string name="textview_tlfnum">Telephone number:</string>
    <string name="textview_msgtext">Message Text:</string>
    <string name="textview_status">Status</string>
    <string name="buttontext_browse">Browse...</string>
    <string name="buttontext_send">Send</string>
    <string name="line">_____________________________________________</string>
    <string name="editText_tlfnum">Phone number...</string>
    <string name="editText_msgtext">Type your message here...</string>
</resources>
