<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.jrios.mysmssender.SendActivity"
    tools:showIn="@layout/activity_send"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textview_sendmsg"
        android:id="@+id/textView_title"
        android:textColor="@android:color/background_light"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/line"
        android:id="@+id/textView"
        android:textColor="@color/line_color"
        android:layout_below="@+id/textView_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textview_tlfnum"
        android:id="@+id/textView_tlf"
        android:layout_marginTop="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_tlf"
        android:textColor="@android:color/background_light"
        android:background="@color/textbox_background"
        android:layout_below="@+id/textView_tlf"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/editText_tlfnum" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttontext_browse"
        android:id="@+id/button_contact"
        android:onClick="onContact"
        android:layout_alignTop="@+id/editText_tlf"
        android:layout_alignBottom="@+id/editText_tlf"
        android:layout_toRightOf="@+id/button_send"
        android:layout_toEndOf="@+id/button_send" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textview_msgtext"
        android:id="@+id/textView_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/editText_tlf"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_light" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText_msg"
        android:layout_below="@+id/textView_msg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_light"
        android:background="@color/textbox_background"
        android:hint="@string/editText_msgtext"
        android:textIsSelectable="false"
        android:layout_gravity="left|top"
        android:gravity="left|top" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textview_status"
        android:id="@+id/textView_msgStatus"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/editText_msg"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_light" />

    <Button
        android:text="@string/buttontext_send"
        android:id="@+id/button_send"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_msgStatus"
        android:layout_centerHorizontal="true"
        android:onClick="onSend" />

</RelativeLayout>
